SAK-30988 Statistics & Grading - Previous/Next Participant alignment issues

--- a/msgcntr/messageforums-app/src/webapp/css/msgcntr_statistics.css
+++ b/msgcntr/messageforums-app/src/webapp/css/msgcntr_statistics.css
@@ -5,3 +5,7 @@
 {
 	font-size: 1em !important;
 }
+.itemNav.specialLink input[type="submit"]:last-child
+{
+	margin-right: 0;
+}
